--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body { 
             margin: 0; 
-            padding: 20px; 
+            padding: 10px; 
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #fdf2f8 0%, #f3e8ff 100%);
             min-height: 100vh;
@@ -16,25 +16,37 @@
             max-width: 800px; 
             margin: 0 auto; 
             background: white;
-            border-radius: 20px;
+            border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            padding: 30px;
+            padding: 15px;
         }
         .header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             color: #7c3aed;
+        }
+        .header h1 {
+            font-size: 20px;
+            margin: 10px 0;
         }
         .stats {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 30px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+            margin-bottom: 20px;
         }
         .stat-card {
-            padding: 20px;
-            border-radius: 15px;
+            padding: 15px;
+            border-radius: 12px;
             text-align: center;
+        }
+        .stat-card h3 {
+            font-size: 12px;
+            margin: 0 0 8px 0;
+        }
+        .stat-card div {
+            font-size: 18px !important;
+            font-weight: bold;
         }
         .green { background: #dcfce7; color: #166534; }
         .red { background: #fee2e2; color: #dc2626; }
@@ -43,99 +55,159 @@
         .calendar {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
-            gap: 10px;
-            margin-bottom: 30px;
+            gap: 3px;
+            margin-bottom: 20px;
         }
         .day-header {
             text-align: center;
             font-weight: bold;
-            padding: 10px;
+            padding: 8px 4px;
             background: #f3f4f6;
-            border-radius: 8px;
+            border-radius: 6px;
+            font-size: 12px;
         }
         .day-cell {
-            border: 2px solid #e5e7eb;
-            border-radius: 12px;
-            padding: 15px;
-            min-height: 120px;
+            border: 1px solid #e5e7eb;
+            border-radius: 8px;
+            padding: 6px;
+            min-height: 140px;
             background: white;
             position: relative;
+            font-size: 11px;
         }
         .day-number {
             font-weight: bold;
             font-size: 14px;
-            margin-bottom: 10px;
+            margin-bottom: 6px;
+            text-align: center;
         }
         .task-input {
-            margin: 5px 0;
+            margin: 3px 0;
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 4px;
         }
         .task-checkbox {
-            width: 16px;
-            height: 16px;
+            width: 14px;
+            height: 14px;
         }
         .task-label {
-            font-size: 12px;
+            font-size: 10px;
             flex: 1;
+            line-height: 1.2;
         }
         .symptom-input {
-            margin: 5px 0;
+            margin: 3px 0;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 12px;
+            font-size: 10px;
         }
         .symptom-select {
-            width: 50px;
-            padding: 2px;
+            width: 35px;
+            height: 20px;
+            padding: 1px;
             border: 1px solid #d1d5db;
-            border-radius: 4px;
+            border-radius: 3px;
+            font-size: 10px;
         }
         .export-btn {
             background: #3b82f6;
             color: white;
             border: none;
-            padding: 12px 24px;
+            padding: 10px 16px;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
-            margin: 10px;
+            font-size: 14px;
+            margin: 5px;
+            touch-action: manipulation;
         }
-        .export-btn:hover {
+        .export-btn:hover, .export-btn:active {
             background: #2563eb;
+            transform: scale(0.98);
         }
         .nav-btn {
             background: #6b7280;
             color: white;
             border: none;
-            padding: 8px 16px;
+            padding: 10px 16px;
             border-radius: 6px;
             cursor: pointer;
             margin: 0 10px;
+            font-size: 14px;
+            touch-action: manipulation;
+        }
+        .nav-btn:hover, .nav-btn:active {
+            background: #4b5563;
+            transform: scale(0.98);
         }
         .month-nav {
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
+        }
+        .month-nav h2 {
+            font-size: 18px;
+            margin: 0;
         }
         .reminders {
             background: #f9fafb;
-            padding: 20px;
-            border-radius: 15px;
-            margin-top: 30px;
+            padding: 15px;
+            border-radius: 12px;
+            margin-top: 20px;
+        }
+        .reminders h3 {
+            font-size: 16px;
+            margin: 0 0 15px 0;
         }
         .reminder-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
+            grid-template-columns: 1fr;
+            gap: 12px;
             margin-top: 15px;
         }
         .reminder-card {
-            padding: 15px;
-            border-radius: 10px;
+            padding: 12px;
+            border-radius: 8px;
+        }
+        .reminder-card h4 {
+            font-size: 14px;
+            margin: 0 0 8px 0;
+        }
+        .reminder-card p {
+            font-size: 12px;
+            line-height: 1.4;
+            margin: 0;
+        }
+        .appointment-item {
+            font-size: 9px; 
+            background: #e0f2fe; 
+            padding: 2px 3px; 
+            border-radius: 3px; 
+            margin: 1px 0;
+            text-align: center;
+            line-height: 1.1;
+        }
+
+        /* 平板适配 */
+        @media (min-width: 768px) {
+            .container { padding: 25px; }
+            .stats { grid-template-columns: repeat(4, 1fr); }
+            .reminder-grid { grid-template-columns: repeat(2, 1fr); }
+            .day-cell { min-height: 120px; padding: 10px; }
+            .task-label { font-size: 11px; }
+            .symptom-input { font-size: 11px; }
+        }
+
+        /* 大屏适配 */
+        @media (min-width: 1024px) {
+            .container { padding: 30px; }
+            .header h1 { font-size: 24px; }
+            .day-cell { min-height: 130px; padding: 12px; }
+            .task-label { font-size: 12px; }
+            .symptom-input { font-size: 12px; }
+            .reminder-grid { grid-template-columns: repeat(2, 1fr); }
         }
     </style>
 </head>
@@ -143,6 +215,9 @@
     <div class="container">
         <div class="header">
             <h1>💝 妈妈调理计划追踪器</h1>
+            <div style="background: #e0f2fe; padding: 8px; border-radius: 8px; margin: 10px 0; font-size: 12px; color: #0369a1;">
+                ✨ 所有专业调理预约已安排在周末，方便您的时间安排
+            </div>
             <button class="export-btn" onclick="exportData()">📥 导出数据</button>
             <input type="file" id="importFile" accept=".json" onchange="importData()" style="display: none;">
             <button class="export-btn" onclick="document.getElementById('importFile').click()">📤 导入数据</button>
@@ -180,21 +255,44 @@
         <div class="reminders">
             <h3>💝 贴心提醒</h3>
             <div class="reminder-grid">
-                <div class="reminder-card" style="background: #dbeafe;">
-                    <h4>💾 数据备份重要提醒</h4>
-                    <p>请定期点击"导出数据"按钮备份记录，避免数据丢失。</p>
-                </div>
-                <div class="reminder-card" style="background: #fee2e2;">
-                    <h4>📊 症状评分说明</h4>
-                    <p>0分=无症状，5分=中等程度，10分=非常严重。</p>
-                </div>
                 <div class="reminder-card" style="background: #dcfce7;">
-                    <h4>🧘 冥想练习建议</h4>
-                    <p>使用小睡眠、冥想星球或Tide APP，每天10-20分钟。</p>
+                    <h4>🏥 中医调理机构信息</h4>
+                    <p><strong>内蒙古自治区中医医院</strong><br>
+                    📍 地址：呼和浩特市新城区健康街11号<br>
+                    📞 电话：0471-6921296<br>
+                    🏢 推荐科室：治未病中心、脾胃科、情志病调理<br>
+                    🎯 调理重点：疏肝理气，调节情绪型胃痛</p>
+                </div>
+                <div class="reminder-card" style="background: #dbeafe;">
+                    <h4>💆‍♀️ 美容养生机构信息</h4>
+                    <p><strong>海伦多兰芳疗生活馆</strong><br>
+                    📍 地址：呼和浩特市鼓楼附近<br>
+                    💎 推荐项目：艾灸+背部调理+肩颈疏通+头疗<br><br>
+                    <strong>玺悦SPA养生馆</strong><br>
+                    📍 地址：呼和浩特市(具体地址需确认)<br>
+                    💎 推荐项目：头疗、肩颈放松、调气</p>
                 </div>
                 <div class="reminder-card" style="background: #f3e8ff;">
-                    <h4>🎯 调理目标</h4>
-                    <p>缓解焦虑躯体化症状，改善胃痛心脏疼。</p>
+                    <h4>🧠 心理支持平台信息</h4>
+                    <p><strong>壹心理 / 简单心理</strong><br>
+                    💻 平台：远程在线咨询<br>
+                    👩‍⚕️ 推荐：中年女性咨询师，具有躯体化经验<br>
+                    🎯 咨询重点：以"长期情绪紧绷+睡眠不稳+胃不舒服"为切入点<br>
+                    📋 目标：释放情绪和教授日常自我照料方式</p>
+                </div>
+                <div class="reminder-card" style="background: #fef3c7;">
+                    <h4>🍵 饮食调理建议</h4>
+                    <p><strong>早餐：</strong>小米粥+山药+核桃<br>
+                    <strong>午餐：</strong>少量肉类+绿叶菜，避免寒凉食物<br>
+                    <strong>晚餐：</strong>山药粥+红枣，晚餐时间提前<br>
+                    <strong>茶饮推荐：</strong>百合莲子汤、玫瑰花茶、合欢皮茶、黄精炖梨水</p>
+                </div>
+                <div class="reminder-card" style="background: #fed7aa;">
+                    <h4>💾 使用提醒 & 目标</h4>
+                    <p><strong>备份提醒：</strong>定期点击"导出数据"备份<br>
+                    <strong>症状评分：</strong>0=无症状，5=中等，10=严重<br>
+                    <strong>冥想建议：</strong>小睡眠、冥想星球、Tide APP，每天10-20分钟<br>
+                    <strong>调理目标：</strong>缓解焦虑躯体化症状，建立健康生活节律</p>
                 </div>
             </div>
         </div>
@@ -220,13 +318,37 @@
                 { date: 6, name: '中医调理', location: '中医医院' },
                 { date: 13, name: '美容养生', location: '芳疗生活馆' },
                 { date: 20, name: '中医调理', location: '中医医院' },
-                { date: 20, name: '心理支持', location: '壹心理' }
+                { date: 27, name: '心理支持', location: '壹心理' }
             ],
             8: [
                 { date: 3, name: '中医调理', location: '中医医院' },
                 { date: 10, name: '美容养生', location: 'SPA养生馆' },
                 { date: 17, name: '中医调理', location: '中医医院' },
-                { date: 15, name: '心理支持', location: '壹心理' }
+                { date: 24, name: '心理支持', location: '壹心理' }
+            ],
+            9: [
+                { date: 7, name: '中医调理', location: '中医医院' },
+                { date: 14, name: '美容养生', location: '芳疗生活馆' },
+                { date: 21, name: '中医调理', location: '中医医院' },
+                { date: 28, name: '心理支持', location: '壹心理' }
+            ],
+            10: [
+                { date: 5, name: '中医调理', location: '中医医院' },
+                { date: 12, name: '美容养生', location: 'SPA养生馆' },
+                { date: 19, name: '中医调理', location: '中医医院' },
+                { date: 26, name: '心理支持', location: '壹心理' }
+            ],
+            11: [
+                { date: 2, name: '中医调理', location: '中医医院' },
+                { date: 9, name: '美容养生', location: '芳疗生活馆' },
+                { date: 16, name: '中医调理', location: '中医医院' },
+                { date: 23, name: '心理支持', location: '壹心理' }
+            ],
+            12: [
+                { date: 7, name: '中医调理', location: '中医医院' },
+                { date: 14, name: '美容养生', location: 'SPA养生馆' },
+                { date: 21, name: '中医调理', location: '中医医院' },
+                { date: 28, name: '心理支持', location: '壹心理' }
             ]
         };
 
@@ -285,7 +407,7 @@
                 const todayAppointments = (appointments[currentMonth + 1] || []).filter(apt => apt.date === date);
                 todayAppointments.forEach(apt => {
                     const aptDiv = document.createElement('div');
-                    aptDiv.style.cssText = 'font-size: 11px; background: #e0f2fe; padding: 2px 4px; border-radius: 4px; margin: 2px 0;';
+                    aptDiv.className = 'appointment-item';
                     aptDiv.textContent = apt.name;
                     dayCell.appendChild(aptDiv);
                 });
